AMP-18238 fix letter-spacing of contract sidebar icon
git-svn-id: file:///svn/branches/AMP_2_10_RELEASE@25343 9e8d75aa-d0cb-44a9-8341-a4b8ba1a38b4

--- a/amp/TEMPLATE/ampTemplate/gisModule/dev/app/less/components/amp-sidebar.less
+++ b/amp/TEMPLATE/ampTemplate/gisModule/dev/app/less/components/amp-sidebar.less
@@ -32,8 +32,9 @@
     height: 44px;
     position:relative;
     text-align: right;
+    padding-right: 11px;
     display: inline-block;
-    letter-spacing: -4px;
+    letter-spacing: -6px;
     width:100%;
 
   }
